Pledge and donor API endpoints logic
