# backend/onest-donor-service/handlers/api/v1/Donor/getAllPledges/{DonorId}.js
@@ -1,5 +1,5 @@
 'use strict';
-var dataProvider = require('../../../../../data/api/v1/Donor/getAllPledges/{DonorId}.js');
+var donorService = require('../../../../../services/Donorservice');
 /**
  * Operations on /api/v1/Donor/getAllPledges/{DonorId}
  */
@@ -11,19 +11,19 @@ module.exports = {
      * produces: 
      * responses: 200
      */
-    post: function (req, res, next) {
+    post: async function (req, res, next) {
         /**
          * Get the data for response 200
          * For response `default` status 200 is used.
          */
         var status = 200;
-        var provider = dataProvider['post']['200'];
-        provider(req, res, function (err, data) {
-            if (err) {
-                next(err);
-                return;
-            }
-            res.status(status).send(data && data.responses);
-        });
+        var reqParams = req.params;
+        var {DonorId} = reqParams ;
+        try {
+            var fetchDonor = await donorService.getAllPledgesBasedOnDonorId(DonorId);
+            res.status(status).send(fetchDonor);
+        } catch (error) {
+            next(error);
+        }
     }
 };
